--- a/myWebSite_4/HTML/index.html
+++ b/myWebSite_4/HTML/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <header class="header">
+        <div class="icon">
+            <img src="../images/myIcon.png" width="50px">
+        </div>
         <div class="title_container">
             <h1>Null&nbsp;Pointer&nbsp;Exception</h1>
             <h2>～&nbsp;ぬるぽがやってくる&nbsp;～</h2>
