--- a/myWebSite_7/html/login.html
+++ b/myWebSite_7/html/login.html
@@ -21,9 +21,9 @@
             </div>
             <div class="right_container">
                 <form id="login_form" class="form" action="../php/Login.php" method="post">
-                <p>メールアドレス&nbsp;:&nbsp;<br><input type="text" placeholder="abc123@..." name="login[0]"></p>
-                <p>ユーザ名&nbsp;:&nbsp;<br><input type="text" placeholder="User..." name="login[1]"></p>
-                <p>パスワード&nbsp;:&nbsp;<br><input type="text" placeholder="A1UE0..." name="login[2]"></p>
+                <p>メールアドレス&nbsp;:&nbsp;<br><input type="text" placeholder="abc123@..." name="login[0]"　required="required"></p>
+                <p>ユーザ名&nbsp;:&nbsp;<br><input type="text" placeholder="User..." name="login[1]"　required="required"></p>
+                <p>パスワード&nbsp;:&nbsp;<br><input type="text" placeholder="A1UE0..." name="login[2]"　required="required"></p>
                 <div class="button_container">
                     <input class="button" type="submit" value="送信">
                     <input class="button" type="reset" value="リセット">
@@ -32,7 +32,7 @@
                     &nbsp;<i class='bx bx-chevrons-right'></i>&nbsp;<a href="../html/register.html">アカウントを作成する</a></p>
                 <p>分からないことはありますか？<br>
                     &nbsp;<i class='bx bx-chevrons-right'></i>&nbsp;<a href="../html/form.html">お問い合わせ</a></p>
-            </form>
+                </form>
             </div>
         </div>
         <script src="../js/script.js"></script>
